--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,9 @@
 <html>
 
     <head>
+        <title>Fireworks</title>
         <meta charset="utf-8">
-        <title>template</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../dist/fireworks.min.js"></script>
         <style>
             * {
